force-app/main/default/objects/Risk_Flag__c/Risk_Flag__c.object-meta.xml
<CustomObject>
    <label>Risk Flag</label>
    <nameField>
        <displayFormat>RISK-{00000}</displayFormat>
        <label>Risk Flag Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Risk Flags</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>