force-app/main/default/objects/Risk_Flag__c/fields/Flag_Type__c.field-meta.xml
<CustomField>
    <fullName>Flag_Type__c</fullName>
    <label>Flag Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Duplicate Application</fullName>
            </value>
            <value>
                <fullName>Address Anomaly</fullName>
            </value>
            <value>
                <fullName>Document Forgery Suspected</fullName>
            </value>
            <value>
                <fullName>Frequent Reissue</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>