force-app/main/default/objects/Risk_Flag__c/fields/Flagged_Date__c.field-meta.xml
<CustomField>
    <fullName>Flagged_Date__c</fullName>
    <label>Flagged Date</label>
    <type>Date</type>
</CustomField>