force-app/main/default/objects/Risk_Flag__c/fields/Passport_Application__c.field-meta.xml
<CustomField>
    <fullName>Passport_Application__c</fullName>
    <label>Passport Application</label>
    <type>Lookup</type>
    <referenceTo>Passport_Application__c</referenceTo>
    <relationshipName>Risk_Flags</relationshipName>
    <relationshipLabel>Risk Flags</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>