force-app/main/default/objects/Risk_Flag__c/fields/Reviewed_By__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_By__c</fullName>
    <label>Reviewed By</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>Reviewed_Risk_Flags</relationshipName>
    <relationshipLabel>Reviewed Risk Flags</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>