force-app/main/default/objects/Risk_Flag__c/validationRules/Reviewed_Requires_Reviewer.validationRule-meta.xml
<ValidationRule>
    <fullName>Reviewed_Requires_Reviewer</fullName>
    <active>true</active>
    <description>Confirming or dismissing a risk flag is an accountable decision; the reviewing user must be named.</description>
    <errorConditionFormula>AND( OR( ISPICKVAL(Status__c, &quot;Confirmed&quot;), ISPICKVAL(Status__c, &quot;Dismissed&quot;) ), ISBLANK(Reviewed_By__c) )</errorConditionFormula>
    <errorDisplayField>Reviewed_By__c</errorDisplayField>
    <errorMessage>Set Reviewed By before confirming or dismissing a risk flag.</errorMessage>
</ValidationRule>